manifests/ingress/traefik-dashboard.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`traefik.smartmur.ca`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
